--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <center>
       <header>
         <img src="sunita.png" alt="profile" width="250" height="250" />
-        <h2>Sunita boghra</h2>
+        <h2>Dr.Sunita boghra</h2>
         <p>BHMS - Web Designer</p>
       </header>
     </center>
