--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
     <section>
       <h2>About Me</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit deleniti
-        quod eos qui consectetur quae officiis beatae perferendis libero dolor
-        architecto, aut officia? Neque maxime repellat illo explicabo veniam
-        rem.
+        My self Dr.Sunita Boghra, I have completed my BHMS in 2018. I have 4
+        years of experience as a medical officer in private hospital. Currently
+        I am learning web designing(HTML,CSS,Javascript).
       </p>
     </section>
     <hr />
